feat(doc): #3596.7 add pci ref to some rules
- Added PCI DSS references to R349, R029, R174, R176, R095, R096,
 R186 and R341
- Updated R174 keywords


Former-commit-id: 90518af2fa1bc0a6371f9fe56229027f3d985f2c

--- a/content/pages/rules/architecture/349/index.adoc
+++ b/content/pages/rules/architecture/349/index.adoc
@@ -172,3 +172,7 @@ domains to match against and does not support the "**null**" origin.
 . [[r26]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.7]
 Address common coding vulnerabilities in software-development processes such as
 cross-site scripting (*XSS*).
+
+. [[r27]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.9]
+Address common coding vulnerabilities in software-development processes such as
+cross-site request forgery (*CSRF*).
