--- a/content/pages/rules/authorization/095/index.adoc
+++ b/content/pages/rules/authorization/095/index.adoc
@@ -86,3 +86,8 @@ Address common coding vulnerabilities in software-development processes
 including improper access control
 (such as insecure direct object references, failure to restrict URL access,
 directory traversal, and failure to restrict user access to functions).
+
+. [[r12]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 7.1.1]
+Define access needs for each role,
+including level of privilege required (for example, user, administrator, etc.)
+for accessing resources.
