--- a/content/pages/rules/authorization/341/index.adoc
+++ b/content/pages/rules/authorization/341/index.adoc
@@ -65,3 +65,7 @@ Address common coding vulnerabilities in software-development processes
 including improper access control
 (such as insecure direct object references, failure to restrict URL access,
 directory traversal, and failure to restrict user access to functions).
+
+. [[r9]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 7.1.2]
+Restrict access to privileged user IDs to least privileges necessary to perform
+job responsibilities.
