--- a/content/pages/rules/source/174/index.adoc
+++ b/content/pages/rules/source/174/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/174/
 :category: source
 :description: This requirement establishes the importance of avoiding distinguishable patterns in requests that execute transactions.
-:keywords: Transactions, Request, Pattern, Application, ASVS, CWE, Rules, Ethical Hacking, Pentesting
+:keywords: Transactions, Request, Pattern, Application, ASVS, CWE, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R174. Transactions without a distinguishable pattern
@@ -28,3 +28,7 @@ Verify that the application or framework enforces a strong anti-*CSRF*
 mechanism to protect authenticated functionality,
 and effective anti-automation or anti-*CSRF* protects unauthenticated
 functionality.
+
+. [[r3]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.9]
+Address common coding vulnerabilities in software-development processes such as
+cross-site request forgery (*CSRF*).
